fix navbar top margin bug on mobile

--- a/resources/js/comps/_layout/header.scss
+++ b/resources/js/comps/_layout/header.scss
@@ -33,9 +33,9 @@ header#navbar {
     border-bottom: 1px solid rgba(255, 255, 255, 0.125);
     // border-top: solid $dark-blue 1px;
     color: white;
-    // margin-top: -1px; // offset upwards a little to hide the edge effect (it is very evident between the top and bottom), cover with the top navbar
+    margin-top: -1px; // offset upwards a little to hide the edge effect (it is very evident between the top and bottom), cover with the top navbar
     // position: relative; 
-    // z-index: -1; // place under the top navbar
+    z-index: -1; // place under the top navbar
 
     .gutter {
 
